--- a/Share Beauty App/Views/IdealProductView.xib
+++ b/Share Beauty App/Views/IdealProductView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -537,6 +537,7 @@
                 <outlet property="mLblProduct" destination="Vik-1L-6Jy" id="Adt-ls-fGO"/>
                 <outlet property="mVBaseLine" destination="SEJ-JG-XWr" id="Era-Nu-145"/>
                 <outlet property="mVBaseProduct" destination="bPz-b3-f4Q" id="ReR-xs-Git"/>
+                <outlet property="mtitleView" destination="8tV-bp-NNb" id="WY1-G8-1Gr"/>
                 <outlet property="openLineButton" destination="NLp-H9-IRc" id="o8C-XB-5XG"/>
                 <outletCollection property="mBtnTroubles" destination="1cv-fK-hwt" collectionClass="NSMutableArray" id="MzG-7T-sI0"/>
                 <outletCollection property="mBtnTroubles" destination="8P5-Nf-kOR" collectionClass="NSMutableArray" id="2gf-jy-gxA"/>
